--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,3 +15,9 @@ html, body { height: 100%; padding-top: 20px; }
     margin-top: 20px;
     overflow: hidden;
 }
+
+div.add-buttom {
+    padding: 12px;
+    display: inline;
+    float:right;
+}
