--- a/src/app/modules/grupos-comunhao-adm/edicao-grupo/edicao-grupo.component.html
+++ b/src/app/modules/grupos-comunhao-adm/edicao-grupo/edicao-grupo.component.html
@@ -1,1 +1,102 @@
-<p>edicao-grupo works!</p>
+<div class="p-fluid p-6 lg:col-6  lg:col-offset-3 main-container">
+    <p-toast position="bottom-left" sticky="true"></p-toast>
+    <div class="text-center mb-5">
+        <h2>Edite as informações do grupo</h2>
+    </div>
+    <div class="field block">
+        <span class="p-float-label">
+            <p-dropdown [(ngModel)]="diaSemanaSelecionado" inputId="dropdown" [autoDisplayFirst]="false" [options]="diasDaSemana" optionLabel="label"></p-dropdown>
+            <label for="dropdown">Dia da semana *</label>
+        </span>
+    </div>
+    <form [formGroup]="edicaoGrupoForm">
+        <div class="field block">
+            <span class="p-float-label">
+                <p-calendar [timeOnly]="true" dateFormat="HH:mm" inputId="horario" formControlName="horario"></p-calendar>
+                <label for="horario">Horário *</label>
+            </span>
+        </div>
+        <div class="field block">
+            <span class="p-float-label">
+                <p-inputNumber inputId="maxParticipantes" mode="decimal" [showButtons]="true" [min]="0" [max]="50" formControlName="maxParticipantes"></p-inputNumber>
+                <label for="maxParticipantes">Nº máximo de participantes *</label>
+            </span>
+        </div>
+        
+        <div class="field block">
+            <span class="p-float-label">
+                <input type="text" id="nome" pInputText formControlName="nome">
+                <label for="nome">Nome do grupo</label> 
+            </span>
+        </div>
+
+        <div class="field block">
+            <span class="p-float-label">
+                <p-autoComplete formControlName="lider" [suggestions]="filteredMembros" (completeMethod)="filtrarUsuarios($event)" field="nomeCompleto" [dropdown]="true">
+                </p-autoComplete>
+                <label for="lider">Lider</label>
+            </span>
+        </div>
+ 
+        <div class="field block">
+            <span class="p-float-label">
+                <p-autoComplete formControlName="participantes" [suggestions]="filteredMembros" (completeMethod)="filtrarUsuarios($event)" field="nomeCompleto" [multiple]="true" [dropdown]="true">
+                </p-autoComplete>
+                <label for="participantes">Participantes</label>
+            </span>
+        </div>
+
+        <div formGroupName="endereco">
+            <div class="text-left mb-3">
+                <h4>Endereço</h4>
+            </div>
+            <div class="field block">
+                <span class="p-float-label">
+                    <p-inputMask inputId="cep" (onBlur)="buscarCep($event)" mask="99.999-999" formControlName="cep"></p-inputMask>
+                    <label for="cep">CEP *</label>
+                </span>  
+            </div>
+            <div class="field block">
+                <span class="p-float-label">
+                    <input type="text" id="logradouro" pInputText formControlName="logradouro">
+                    <label for="logradouro">Logradouro *</label> 
+                </span>
+            </div>
+            <div class="field block">
+                <span class="p-float-label">
+                    <input type="text" id="numero" pInputText formControlName="numero">
+                    <label for="numero">Número *</label> 
+                </span>
+            </div>
+            <div class="field block">
+                <span class="p-float-label">
+                    <input type="text" id="complemento" pInputText formControlName="complemento">
+                    <label for="complemento">Complemento</label> 
+                </span>
+            </div>
+            <div class="field block">
+                <span class="p-float-label">
+                    <input type="text" id="bairro" pInputText formControlName="bairro">
+                    <label for="bairro">Bairro *</label> 
+                </span>
+            </div>
+            <div class="field block">
+                <span class="p-float-label">
+                    <input type="text" id="cidade" pInputText formControlName="cidade">
+                    <label for="cidade">Cidade *</label> 
+                </span>
+            </div>
+            <div class="field block">
+                <span class="p-float-label">
+                    <input type="text" id="estado" pInputText formControlName="estado">
+                    <label for="estado">Estado *</label> 
+                </span>
+            </div>
+        </div>
+        <button type="button" pButton class="p-button-raised p-button-rounded" label="Alterar grupo"
+        [disabled]="!edicaoGrupoForm.valid || !diaSemanaSelecionado"
+        (click)="editarGrupo()">
+        </button>
+    </form>
+</div>
+
