--- a/src/app/modules/grupos-comunhao-adm/lista-grupos/lista-grupos.component.html
+++ b/src/app/modules/grupos-comunhao-adm/lista-grupos/lista-grupos.component.html
@@ -1,4 +1,75 @@
+<!--
 <div class="surface-card p-4 main-container">
-    <h2 class="text-left mb-3">Gerenciamento de grupos de comunhão</h2>
-    <button pButton pRipple type="button" icon="pi pi-plus" label="Incluir grupo" class="p-button-text" [routerLink]="['/adm/grupos-comunhao/cadastro']"></button>
-</div>   
+    <h2 class="text-left mb-3">Grupos de comunhão - adm</h2>
+    <div class="card">
+        <p-dataView #dv [value]="grupos" layout="grid">
+            <ng-template pTemplate="header">
+                <div class="flex flex-column md:flex-row md:justify-content-between">
+                    <h3 class="inline text-center mb-3">Lista de grupos</h3>
+                    <button pButton pRipple type="button" icon="pi pi-plus" label="Incluir grupo" class="p-button-outlined p-button-rounded my-2" [routerLink]="['/adm/grupos-comunhao/cadastro']"></button>
+
+                </div>
+            </ng-template>
+            <ng-template let-grupo pTemplate="listItem">
+                <div>
+                    {{grupo.nome}}
+                </div>
+            </ng-template>
+        </p-dataView>
+    </div>
+</div>
+-->
+
+<div class="surface-card p-4 main-container">
+    <p-toast position="bottom-left" sticky="true"></p-toast>
+    <h2 class="text-left mb-3">Grupos de comunhão - administrativo</h2>
+    <div class="card">
+        <p-table #dt [value]="grupos" [columns]="cols" [paginator]="true" [rows]="5" [totalRecords]="totalRecords" layout="grid">
+          <ng-template pTemplate="header">
+                <div class="flex flex-column md:flex-row md:justify-content-between">
+                    <h3 class="inline text-center mb-3">Lista de grupos</h3>
+                    <button pButton pRipple type="button" icon="pi pi-plus" label="Incluir grupo" class="p-button-outlined p-button-rounded my-2" [routerLink]="['/adm/grupos-comunhao/cadastro']"></button>
+                </div>
+                <tr>
+                    <th *ngFor="let col of cols">
+                        {{col.header}}
+                    </th>
+                </tr>
+            </ng-template>
+            <ng-template let-grupo pTemplate="body">
+                <tr>
+                    <td>
+                        <span class="p-column-title">Grupo</span>
+                        {{grupo.nome}}
+                    </td>
+                    <td>
+                        <span class="p-column-title">Dia da semana</span>
+                        {{grupo.diaSemana}}
+                    </td>
+                    <td>
+                        <span class="p-column-title">Horário</span>
+                        {{grupo.horario}}h
+                    </td>
+                    <td>
+                        <span class="p-column-title">Líder</span>
+                        {{grupo.lider?.nomeCompleto}}
+                    </td>
+                    <td>
+                        <span class="p-column-title">Nº de participantes</span>
+                        {{grupo.participantes?.length}}
+                    </td>
+                    <td>
+                        <button pButton pRipple icon="pi pi-search" class="p-button-rounded p-button-outlined" [routerLink]="['/adm/grupos-comunhao/detalhe/', grupo.id]"></button>
+                        <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success p-button-outlined" [routerLink]="['/adm/grupos-comunhao/edicao/', grupo.id]"></button>
+                        <button pButton pRipple icon="pi pi-trash" (click)="excluirGrupoComunhao(grupo.id)" class="p-button-rounded p-button-danger p-button-outlined"></button>
+                    </td>
+                    <td>
+                        <p-tag icon="pi pi-exclamation-triangle" *ngIf="verificaSeGrupoLotado(grupo)" severity="warning" value="Lotado" [rounded]="true"></p-tag>
+                        <p-tag icon="pi pi-check" *ngIf="!verificaSeGrupoLotado(grupo)" severity="success" value="Disponível" [rounded]="true"></p-tag>
+                    </td>
+                </tr>
+            </ng-template>
+        </p-table>
+        <p-confirmDialog [style]="{width: '50vw'}" [baseZIndex]="10000" rejectButtonStyleClass="p-button-text"></p-confirmDialog>
+    </div>
+</div>
