--- a/src/app/modules/grupos-comunhao/lista-grupos/lista-grupos.component.html
+++ b/src/app/modules/grupos-comunhao/lista-grupos/lista-grupos.component.html
@@ -3,7 +3,7 @@
     <h2 class="text-left mb-3">Grupos de comunhão</h2>
     <div class="card">
         <p-table #dt [value]="grupos" [paginator]="true" [rows]="5" [totalRecords]="totalRecords" layout="grid">
-          <ng-template pTemplate="header">
+          <ng-template pTemplate="caption">
                 <div class="flex flex-column md:flex-row md:justify-content-between">
                     <h3 class="inline text-center mb-3">Lista de grupos</h3>
                 </div>
