--- a/src/app/modules/doacoes-adm/edicao-doacao/edicao-doacao.component.html
+++ b/src/app/modules/doacoes-adm/edicao-doacao/edicao-doacao.component.html
@@ -22,7 +22,7 @@
         <div class="field block">
             <span class="p-float-label">
                 <input type="text" id="tamanho" pInputText formControlName="tamanho">
-                <label for="tamanho">Tamanho *</label> 
+                <label for="tamanho">Tamanho * (Ex. P, M, G, 5 kg)</label> 
             </span>
         </div>
         <div class="field block">
