--- a/src/app/modules/doacoes-adm/lista-doacoes/lista-doacoes.component.html
+++ b/src/app/modules/doacoes-adm/lista-doacoes/lista-doacoes.component.html
@@ -63,11 +63,11 @@
                     </td>
 
                     <td>
-                        <button *ngIf="!doacao.entregaRealizada" pButton pRipple icon="pi pi-check" (click)="informarEntrega(doacao)" class="p-button-rounded p-button-success p-button-outlined"></button>
-                        <button *ngIf="doacao.entregaRealizada" pButton pRipple icon="pi pi-replay" (click)="cancelarEntrega(doacao)" class="p-button-rounded p-button-help p-button-outlined"></button>
-                        <button pButton pRipple icon="pi pi-search" class="p-button-rounded p-button-outlined" [routerLink]="['/adm/doacoes/detalhe/', doacao.id]"></button>
-                        <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-warning p-button-outlined" [routerLink]="['/adm/doacoes/edicao/', doacao.id]"></button>
-                        <button pButton pRipple icon="pi pi-trash" (click)="excluirDoacao(doacao.id)" class="p-button-rounded p-button-danger p-button-outlined"></button>
+                        <button *ngIf="!doacao.entregaRealizada" pTooltip="Informar entrega" tooltipPosition="bottom" pButton pRipple icon="pi pi-check" (click)="informarEntrega(doacao)" class="p-button-rounded p-button-success p-button-outlined"></button>
+                        <button *ngIf="doacao.entregaRealizada" pTooltip="Cancelar entrega" tooltipPosition="bottom" pButton pRipple icon="pi pi-replay" (click)="cancelarEntrega(doacao)" class="p-button-rounded p-button-help p-button-outlined"></button>
+                        <button pButton pRipple icon="pi pi-search" pTooltip="Visualizar" tooltipPosition="bottom" class="p-button-rounded p-button-outlined" [routerLink]="['/adm/doacoes/detalhe/', doacao.id]"></button>
+                        <button pButton pRipple icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="bottom" class="p-button-rounded p-button-warning p-button-outlined" [routerLink]="['/adm/doacoes/edicao/', doacao.id]"></button>
+                        <button pButton pRipple icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="bottom" (click)="excluirDoacao(doacao.id)" class="p-button-rounded p-button-danger p-button-outlined"></button>
                     </td>
                 </tr>
             </ng-template>
