--- a/src/app/modules/familias/edicao-familia/edicao-familia.component.html
+++ b/src/app/modules/familias/edicao-familia/edicao-familia.component.html
@@ -78,7 +78,7 @@
                 </span>
             </div>
         </div>
-        <button type="button" pButton class="p-button-raised p-button-rounded" label="Editar família"
+        <button type="button" pButton class="p-button-raised p-button-rounded" label="Alterar família"
         [disabled]="!edicaoFamiliaForm.valid"
         (click)="editarFamilia()">
         </button>
