--- a/src/app/modules/itens-doacao/itens-doacao.component.html
+++ b/src/app/modules/itens-doacao/itens-doacao.component.html
@@ -24,8 +24,8 @@
                         </li>
                     </td>
                     <td>
-                        <button pButton pRipple icon="pi pi-pencil" (click)="showModalEdicao(item)" class="p-button-rounded p-button-outlined"></button>
-                        <button pButton pRipple icon="pi pi-trash" (click)="excluirItem(item)" class="p-button-rounded p-button-danger p-button-outlined"></button>
+                        <button pButton pRipple pTooltip="Editar" tooltipPosition="bottom" icon="pi pi-pencil" (click)="showModalEdicao(item)" class="p-button-rounded p-button-outlined"></button>
+                        <button pButton pRipple pTooltip="Excluir" tooltipPosition="bottom" icon="pi pi-trash" (click)="excluirItem(item)" class="p-button-rounded p-button-danger p-button-outlined"></button>
                     </td>
                 </tr>
             </ng-template>
@@ -76,7 +76,7 @@
         </form>
     </div>
     <ng-template pTemplate="footer">
-    <p-button icon="pi pi-pencil" label="Editar" (click)="editarItemDoacao()" styleClass="p-button-text"></p-button>
+    <p-button icon="pi pi-pencil" label="Salvar alterações" (click)="editarItemDoacao()" styleClass="p-button-text"></p-button>
     </ng-template>
     </p-dialog>
 
